--- a/Minesweeper/bin/.gitignore
+++ b/Minesweeper/bin/.gitignore
@@ -1,5 +1,19 @@
+/BestFrame$ButtonClickListener.class
+/BestFrame.class
+/CustomFrame$ButtonClickListener.class
+/CustomFrame.class
+/GameFrame$1.class
+/GameFrame$ButtonClickListener.class
+/GameFrame$WinEvent.class
+/GameFrame.class
+/GetBestNameFrame$1.class
+/GetBestNameFrame$2.class
+/GetBestNameFrame.class
+/HowToPlayFrame.class
+/ImagePanel.class
+/InfoFrame.class
+/MainFrameManager$WinEvent.class
+/MainFrameManager.class
+/PlayGame.class
 /StopWatch.class
 /TimeLabel.class
-/GameFrame$1.class
-/ImagePanel.class
-/MatrixButton.class
