handle music play memory leak

--- a/Minesweeper/bin/.gitignore
+++ b/Minesweeper/bin/.gitignore
@@ -14,6 +14,7 @@
 /InfoFrame.class
 /MainFrameManager$WinEvent.class
 /MainFrameManager.class
+/MineLabel.class
 /PlayGame.class
 /StopWatch.class
 /TimeLabel.class
